--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 name: Release
-on: push
-#on: 
-#  push:
-#    tags:        
-#      - v*
+
+on: 
+  push:
+    tags:        
+      - v*
 
 jobs:
   release:
