--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"webpack-dev-server": "^3.10.3"
 	},
 	"dependencies": {
+		"@sentry/browser": "^5.15.0",
 		"array-move": "^2.2.1",
 		"bindings": "^1.5.0",
 		"blueimp-load-image": "^2.26.0",
@@ -110,6 +111,7 @@
 		"readline": "^1.3.0",
 		"rehype": "^9.0.1",
 		"selection-ranges": "^3.0.3",
+		"sentry": "^0.1.2",
 		"sha1": "^1.1.1",
 		"source-map-loader": "^0.2.4",
 		"sprintf-kit": "^2.0.0",
