--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 	},
 	"dependencies": {
 		"@sentry/browser": "^5.15.0",
+		"amplitude-js": "^5.10.0",
 		"array-move": "^2.2.1",
 		"bindings": "^1.5.0",
 		"blueimp-load-image": "^2.26.0",
