--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
 		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
 		"rehype": "^9.0.1",
+		"runes": "^0.4.3",
 		"selection-ranges": "^3.0.3",
 		"sentry": "^0.1.2",
 		"sha1": "^1.1.1",
