fix asar unpack

--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
 			"!dist/*",
 			"dist/index.html",
 			"dist/main.js",
+			"dist/run.js",
 			"!node_modules/**/*",
 			"node_modules/electron-util",
 			"node_modules/new-github-issue-url",
