#286: full text search implementation

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"emoji-mart": "^2.11.2",
 		"file-loader": "^4.3.0",
 		"file-type": "^12.4.2",
+		"flexsearch": "^0.6.32",
 		"fs": "0.0.1-security",
 		"get-input-selection": "^1.1.4",
 		"highlight.js": "^9.18.1",
@@ -89,6 +90,7 @@
 		"lazy-val": "^1.0.4",
 		"lodash": "^4.17.15",
 		"lowlight": "^1.13.1",
+		"lunr": "^2.3.8",
 		"mem": "^6.1.0",
 		"mobx": "^5.15.4",
 		"mobx-decorators": "^6.0.1",
