--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
 		"xtend": "^4.0.2"
 	},
 	"build": {
+		"generateUpdatesFilesForAllChannels": true,
 		"afterSign": "electron/notarize.js",
 		"appId": "com.anytype.anytype2",
 		"compression": "normal",
