--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"blueimp-load-image": "^2.31.0",
 		"css-loader": "^3.5.3",
 		"electron-dl": "^1.14.0",
+		"electron-json-storage": "^4.1.8",
 		"electron-log": "^3.0.9",
 		"electron-updater": "^4.3.1",
 		"electron-util": "^0.12.3",
