package img fix

--- a/package.json
+++ b/package.json
@@ -155,8 +155,7 @@
 			"dist/index.html",
 			"dist/main.js",
 			"dist/run.js",
-			"dist/emoji/*",
-			"dist/cover/*",
+			"dist/img/*",
 			"!node_modules/**/*",
 			"node_modules/electron-util",
 			"node_modules/new-github-issue-url",
