--- a/package.json
+++ b/package.json
@@ -155,7 +155,7 @@
 			"dist/index.html",
 			"dist/main.js",
 			"dist/run.js",
-			"dist/img/*",
+			"dist/img/**/*",
 			"!node_modules/**/*",
 			"node_modules/electron-util",
 			"node_modules/new-github-issue-url",
