--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "anytype2",
-	"version": "0.11.8-alpha",
+	"version": "0.12.0",
 	"description": "Anytype",
 	"main": "electron.js",
 	"scripts": {
