feedback with uuid check

--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
 	},
 	"homepage": "https://github.com/anytypeio/js-anytype#readme",
 	"devDependencies": {
-		"@babel/core": "^7.9.6",
+		"@babel/core": "^7.10.2",
 		"@types/history": "^4.7.6",
 		"@types/i18n": "^0.8.6",
 		"@types/is": "0.0.21",
 		"@types/jquery": "^3.3.38",
-		"@types/lodash": "^4.14.152",
+		"@types/lodash": "^4.14.155",
 		"@types/long": "^4.0.1",
 		"@types/mobx-devtools-mst": "^0.9.7",
-		"@types/node": "^12.12.42",
-		"@types/react": "^16.9.35",
+		"@types/node": "^12.12.47",
+		"@types/react": "^16.9.36",
 		"@types/react-beautiful-dnd": "^11.0.5",
 		"@types/react-dnd": "^3.0.2",
 		"@types/react-dnd-html5-backend": "^3.0.2",
@@ -48,7 +48,7 @@
 		"@types/react-router-dom": "^4.3.5",
 		"babel-loader": "^8.1.0",
 		"babel-preset-env": "^1.7.0",
-		"electron": "^8.3.0",
+		"electron": "^8.3.1",
 		"electron-builder": "^21.2.0",
 		"electron-notarize": "^0.2.1",
 		"git-revision-webpack-plugin": "^3.0.6",
@@ -66,7 +66,7 @@
 		"webpack-dev-server": "^3.11.0"
 	},
 	"dependencies": {
-		"@sentry/browser": "^5.15.5",
+		"@sentry/browser": "^5.17.0",
 		"amplitude-js": "^5.11.0",
 		"array-move": "^2.2.2",
 		"bindings": "^1.5.0",
@@ -122,7 +122,8 @@
 		"sha1": "^1.1.1",
 		"source-map-loader": "^0.2.4",
 		"sprintf-kit": "^2.0.0",
-		"typescript": "^3.9.3",
+		"typescript": "^3.9.5",
+		"uuid": "^8.1.0",
 		"webpack-bundle-analyzer": "^3.8.0",
 		"xtend": "^4.0.2"
 	},
