highlight.js version fix

--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
 		"flexsearch": "^0.6.32",
 		"fs": "0.0.1-security",
 		"get-input-selection": "^1.1.4",
-		"highlight.js": "^9.18.1",
+		"highlight.js": "~10.1.0",
 		"history": "^4.10.1",
 		"inputmask": "^5.0.3",
 		"install": "^0.13.0",
@@ -214,7 +214,9 @@
 			"node_modules/lockfile",
 			"node_modules/at-least-node",
 			"node_modules/protobufjs",
-			"node_modules/@protobufjs"
+			"node_modules/@protobufjs",
+			"node_modules/highlight.js",
+			"node_modules/highlight.js/lib/core"
 		],
 		"dmg": {
 			"sign": false
