--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,23 @@
 {
-	"plugins": ["react-hot-loader/babel"]
+	"plugins": [
+		"react-hot-loader/babel",
+		[ "prismjs", {
+			"languages": [ 
+				"javascript", 
+				"css", 
+				"markup", 
+				"java", 
+				"cpp", 
+				"csharp", 
+				"php", 
+				"sql", 
+				"go", 
+				"swift", 
+				"kotlin" 
+			],
+			"plugins": [ "line-numbers" ],
+			"theme": "twilight",
+			"css": false
+		} ]
+	]
 }
