--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"start:electron-wait-webpack": "wait-for-localhost 8080 && ./node_modules/.bin/electron .",
 		"start:dev": "npm-run-all --parallel start:watch start:electron-wait-webpack",
 		"start:prod": "npm-run-all --parallel start:watch-prod start:electron-wait-webpack",
-		"build": "webpack --mode=production --env.NODE_ENV=production -p --config webpack.config.js",
+		"build": "webpack --verbose --profile --mode=development --env.NODE_ENV=production -p --config webpack.config.js",
 		"dist:mac": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --macos",
 		"dist:win": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --windows",
 		"dist:linux": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --linux",
@@ -53,6 +53,7 @@
 		"electron-builder": "^21.2.0",
 		"electron-notarize": "^0.2.1",
 		"git-revision-webpack-plugin": "^3.0.6",
+		"ifdef-loader": "^2.1.5",
 		"json-loader": "^0.5.7",
 		"sass-loader": "^8.0.2",
 		"style-loader": "^1.2.1",
