fixed relative imports, removed babel transpiler for js files

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
 		"start:watch-prod": "webpack-dev-server --mode=production --env.NODE_ENV=production --history-api-fallback --cache",
 		"start:electron": "./node_modules/.bin/electron .",
 		"start:electron-wait-webpack": "wait-for-localhost 8080 && ./node_modules/.bin/electron .",
-		"start:dev": "npm-run-all --parallel start:watch start:electron-wait-webpack",
-		"start:prod": "npm-run-all --parallel start:watch-prod start:electron-wait-webpack",
-		"build": "webpack --verbose --profile --mode=development --env.NODE_ENV=production -p --config webpack.config.js",
+		"start:dev": "UV_THREADPOOL_SIZE=1024 npm-run-all --parallel start:watch start:electron-wait-webpack",
+		"start:prod": "UV_THREADPOOL_SIZE=1024 npm-run-all --parallel start:watch-prod start:electron-wait-webpack",
+		"build": "UV_THREADPOOL_SIZE=1024 webpack --verbose --progress --debug --display-error-details --display verbose --profile --mode=development --env.NODE_ENV=development --config webpack.config.js",
+		"build:prod": "UV_THREADPOOL_SIZE=1024 webpack --verbose --progress --debug --display-error-details --display verbose --profile --mode=production --env.NODE_ENV=production -p --config webpack.config.js",
 		"dist:mac": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --macos",
 		"dist:win": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --windows",
 		"dist:linux": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --linux",
@@ -31,17 +32,17 @@
 	},
 	"homepage": "https://github.com/anytypeio/js-anytype#readme",
 	"devDependencies": {
-		"@babel/core": "^7.10.2",
+		"@babel/core": "^7.10.3",
 		"@types/history": "^4.7.6",
 		"@types/i18n": "^0.8.6",
 		"@types/is": "0.0.21",
-		"@types/jquery": "^3.3.38",
-		"@types/lodash": "^4.14.155",
+		"@types/jquery": "^3.5.0",
+		"@types/lodash": "^4.14.156",
 		"@types/long": "^4.0.1",
 		"@types/mobx-devtools-mst": "^0.9.7",
 		"@types/node": "^12.12.47",
 		"@types/prismjs": "^1.16.1",
-		"@types/react": "^16.9.37",
+		"@types/react": "^16.9.38",
 		"@types/react-beautiful-dnd": "^11.0.5",
 		"@types/react-dnd": "^3.0.2",
 		"@types/react-dnd-html5-backend": "^3.0.2",
@@ -49,7 +50,7 @@
 		"@types/react-router-dom": "^4.3.5",
 		"babel-loader": "^8.1.0",
 		"babel-preset-env": "^1.7.0",
-		"electron": "^8.3.2",
+		"electron": "^8.3.3",
 		"electron-builder": "^21.2.0",
 		"electron-notarize": "^0.2.1",
 		"git-revision-webpack-plugin": "^3.0.6",
@@ -64,7 +65,7 @@
 		"url-loader": "^2.3.0",
 		"wait-for-localhost-cli": "^1.1.0",
 		"webpack": "^4.43.0",
-		"webpack-cli": "^3.3.11",
+		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0"
 	},
 	"dependencies": {
