use pb without webpack

--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
 		"flexsearch": "^0.6.32",
 		"fs": "0.0.1-security",
 		"get-input-selection": "^1.1.4",
+		"google-protobuf": "^3.12.2",
+		"grpc-web": "^1.1.0",
 		"highlight.js": "^10.1.1",
 		"history": "^4.10.1",
 		"inputmask": "^5.0.3",
@@ -152,7 +154,7 @@
 			"dist/main.js",
 			"dist/index.html",
 			"dist/run.js",
-			"dist/commands.js",
+			"dist/lib",
 			"build"
 		],
 		"extraResources": [],
@@ -162,8 +164,9 @@
 			"!dist/*",
 			"dist/index.html",
 			"dist/main.js",
-			"dist/commands.js",
+			"dist/models.pb.js",
 			"dist/run.js",
+			"dist/lib/**/*",
 			"dist/img/**/*",
 			"!node_modules/**/*",
 			"node_modules/electron-util",
