--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 	},
 	"dependencies": {
 		"@sentry/browser": "^5.18.0",
+		"@types/bindings": "^1.3.0",
 		"amplitude-js": "^5.11.0",
 		"array-move": "^2.2.2",
 		"babel-plugin-prismjs": "^2.0.1",
