--- a/package.json
+++ b/package.json
@@ -6,15 +6,11 @@
 	"scripts": {
 		"lint": "tslint -c tslint.json -p tsconfig.json",
 		"update:addon": "./update.sh",
-		"start:watch": "webpack-dev-server --progress --mode=development --env.NODE_ENV=development --history-api-fallback --cache",
-		"start:watch-prod": "webpack-dev-server --progress --mode=production --env.NODE_ENV=production --history-api-fallback --cache",
-		"start:electron": "./node_modules/.bin/electron .",
-		"start:electron-wait-webpack": "wait-for-localhost 8080 && ./node_modules/.bin/electron .",
+		"start:watch": "cross-env webpack-dev-server --progress --mode=development --env.NODE_ENV=development --env.SERVER_PORT=$SERVER_PORT --history-api-fallback --cache",
+		"start:electron-wait-webpack": "cross-env wait-for-localhost $SERVER_PORT && ./node_modules/.bin/electron .",
 		"start:dev": "UV_THREADPOOL_SIZE=1024 npm-run-all --parallel start:watch start:electron-wait-webpack",
-		"start:prod": "UV_THREADPOOL_SIZE=1024 npm-run-all --parallel start:watch-prod start:electron-wait-webpack",
 		"start:dev-addon": "ANYTYPE_USE_ADDON=1 npm-run-all start:dev",
 		"build": "UV_THREADPOOL_SIZE=1024 webpack --verbose --progress --debug --display-error-details --display verbose --profile --mode=development --env.NODE_ENV=development --config webpack.config.js",
-		"build:prod": "UV_THREADPOOL_SIZE=1024 webpack --verbose --progress --debug --display-error-details --display verbose --profile --mode=production --env.NODE_ENV=production -p --config webpack.config.js",
 		"dist:mac": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --macos",
 		"dist:win": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --windows",
 		"dist:linux": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --linux",
@@ -77,6 +73,7 @@
 		"babel-plugin-prismjs": "^2.0.1",
 		"bindings": "^1.5.0",
 		"blueimp-load-image": "^2.31.0",
+		"cross-env": "^7.0.2",
 		"css-loader": "^3.6.0",
 		"electron-devtools-installer": "^3.0.0",
 		"electron-dl": "^1.14.0",
@@ -114,6 +111,7 @@
 		"npm-run-all": "^4.1.5",
 		"object-assign": "^4.1.1",
 		"os": "^0.1.1",
+		"portfinder-sync": "0.0.2",
 		"prismjs": "^1.20.0",
 		"protobufjs": "^6.9.0",
 		"raf": "^3.4.1",
