removed UV_THREADPOOL_SIZE for windows build

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
 		"update:addon": "./update.sh",
 		"start:watch": "cross-env webpack-dev-server --progress --mode=development --env.NODE_ENV=development  --env.SERVER_PORT=$SERVER_PORT --env.DATA_PATH=$DATA_PATH --history-api-fallback --cache",
 		"start:electron-wait-webpack": "cross-env wait-for-localhost $SERVER_PORT && ./node_modules/.bin/electron .",
-		"start:dev": "UV_THREADPOOL_SIZE=1024 npm-run-all --parallel start:watch start:electron-wait-webpack",
+		"start:dev": "npm-run-all --parallel start:watch start:electron-wait-webpack",
 		"start:dev-addon": "ANYTYPE_USE_ADDON=1 npm-run-all start:dev",
-		"build": "UV_THREADPOOL_SIZE=1024 webpack --verbose --progress --debug --display-error-details --display verbose --profile --mode=development --env.NODE_ENV=development --config webpack.config.js",
+		"build": "webpack --progress --mode=development --env.NODE_ENV=development --config webpack.config.js",
 		"dist:mac": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --macos",
 		"dist:win": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --windows",
 		"dist:linux": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --linux",
