--- a/package.json
+++ b/package.json
@@ -221,6 +221,7 @@
 			"node_modules/jsonfile",
 			"node_modules/electron-json-storage",
 			"node_modules/lodash",
+			"node_modules/lodash.isequal",
 			"node_modules/async",
 			"node_modules/rimraf",
 			"node_modules/mkdirp",
