fix package-deps building

--- a/package.json
+++ b/package.json
@@ -177,108 +177,69 @@
 			"dist/anytypeHelper.exe",
 			"dist/anytypeHelper",
 			"!node_modules/**/*",
-			"node_modules/builder-util-runtime",
-			"node_modules/js-yaml",
-			"node_modules/graceful-fs",
-			"node_modules/semver",
-			"node_modules/electron",
-			"node_modules/universalify",
-			"node_modules/semver",
-			"node_modules/fs-extra",
-			"node_modules/electron-updater",
-			"node_modules/fs-extra",
-			"node_modules/js-yaml",
-			"node_modules/semver",
-			"node_modules/electron-log",
-			"node_modules/google-protobuf",
-			"node_modules/js-yaml",
-			"node_modules/fs-extra",
-			"node_modules/js-yaml",
-			"node_modules/semver",
-			"node_modules/electron-log",
-			"node_modules/google-protobuf",
-			"node_modules/electron-updater",
-			"node_modules/jsonfile",
-			"node_modules/fs-extra",
-			"node_modules/js-yaml",
-			"node_modules/semver",
-			"node_modules/electron-updater",
-			"node_modules/minimatch",
-			"node_modules/path-is-absolute",
-			"node_modules/electron-util",
-			"node_modules/builder-util-runtime",
-			"node_modules/debug",
-			"node_modules/builder-util-runtime",
-			"node_modules/fs-extra",
-			"node_modules/at-least-node",
-			"node_modules/fs-extra",
-			"node_modules/js-yaml",
-			"node_modules/semver",
-			"node_modules/electron-updater",
-			"node_modules/lodash",
-			"node_modules/glob",
-			"node_modules/fs.realpath",
-			"node_modules/glob",
-			"node_modules/wrappy",
-			"node_modules/once",
-			"node_modules/signal-exit",
-			"node_modules/electron-util",
-			"node_modules/new-github-issue-url",
-			"node_modules/electron-util",
-			"node_modules/electron-is-dev",
-			"node_modules/electron-util",
-			"node_modules/debug",
-			"node_modules/ms",
-			"node_modules/debug",
-			"node_modules/supports-color",
-			"node_modules/has-flag",
-			"node_modules/builder-util-runtime",
-			"node_modules/sax",
-			"node_modules/graceful-fs",
-			"node_modules/fs-extra",
-			"node_modules/jsonfile",
-			"node_modules/fs-extra",
-			"node_modules/js-yaml",
-			"node_modules/esprima",
-			"node_modules/js-yaml",
-			"node_modules/lazy-val",
-			"node_modules/semver",
-			"node_modules/electron-updater",
-			"node_modules/lodash.isequal",
-			"node_modules/electron-updater",
-			"node_modules/builder-util-runtime",
-			"node_modules/electron-updater",
-			"node_modules/electron-dl",
-			"node_modules/unused-filename",
-			"node_modules/path-exists",
-			"node_modules/modify-filename",
-			"node_modules/pupa",
-			"node_modules/ext-name",
-			"node_modules/ext-list",
-			"node_modules/mime-db",
-			"node_modules/sort-keys-length",
-			"node_modules/sort-keys",
-			"node_modules/is-plain-obj",
-			"node_modules/electron-log",
-			"node_modules/electron-json-storage",
 			"node_modules/async",
-			"node_modules/rimraf",
-			"node_modules/fs.realpath",
-			"node_modules/brace-expansion",
-			"node_modules/concat-map",
+			"node_modules/at-least-node",
 			"node_modules/balanced-match",
-			"node_modules/inherits",
-			"node_modules/glob",
-			"node_modules/inflight",
-			"node_modules/mkdirp",
-			"node_modules/write-file-atomic",
-			"node_modules/imurmurhash",
-			"node_modules/signal-exit",
-			"node_modules/electron-json-storage",
-			"node_modules/lockfile",
-			"node_modules/grpc-web",
 			"node_modules/bindings",
-			"node_modules/file-uri-to-path"
+			"node_modules/brace-expansion",
+			"node_modules/builder-util-runtime",
+			"node_modules/concat-map",
+			"node_modules/debug",
+			"node_modules/electron",
+			"node_modules/electron-dl",
+			"node_modules/electron-is-dev",
+			"node_modules/electron-json-storage",
+			"node_modules/electron-log",
+			"node_modules/electron-updater",
+			"node_modules/electron-util",
+			"node_modules/esprima",
+			"node_modules/ext-list",
+			"node_modules/ext-name",
+			"node_modules/file-type",
+			"node_modules/file-uri-to-path",
+			"node_modules/fs-extra",
+			"node_modules/fs.realpath",
+			"node_modules/glob",
+			"node_modules/google-protobuf",
+			"node_modules/graceful-fs",
+			"node_modules/grpc-web",
+			"node_modules/has-flag",
+			"node_modules/imurmurhash",
+			"node_modules/inflight",
+			"node_modules/inherits",
+			"node_modules/is-plain-obj",
+			"node_modules/js-yaml",
+			"node_modules/jsonfile",
+			"node_modules/lazy-val",
+			"node_modules/lockfile",
+			"node_modules/lodash",
+			"node_modules/lodash.isequal",
+			"node_modules/mime-db",
+			"node_modules/minimatch",
+			"node_modules/mkdirp",
+			"node_modules/modify-filename",
+			"node_modules/ms",
+			"node_modules/new-github-issue-url",
+			"node_modules/once",
+			"node_modules/p-finally",
+			"node_modules/p-try",
+			"node_modules/path-exists",
+			"node_modules/path-is-absolute",
+			"node_modules/pify",
+			"node_modules/pupa",
+			"node_modules/read-chunk",
+			"node_modules/rimraf",
+			"node_modules/sax",
+			"node_modules/semver",
+			"node_modules/signal-exit",
+			"node_modules/sort-keys",
+			"node_modules/sort-keys-length",
+			"node_modules/supports-color",
+			"node_modules/universalify",
+			"node_modules/unused-filename",
+			"node_modules/with-open-file",
+			"node_modules/wrappy",
+			"node_modules/write-file-atomic"
 		],
 		"dmg": {
 			"sign": false
