--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"electron-log": "^3.0.9",
 		"electron-updater": "^4.3.1",
 		"electron-util": "^0.12.3",
+		"electron-window-state": "^5.0.3",
 		"emoji-mart": "^2.11.2",
 		"escape-string-regexp": "^4.0.0",
 		"file-loader": "^4.3.0",
