--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
 		"is": "^3.3.0",
 		"jquery": "^3.5.1",
 		"lazy-val": "^1.0.4",
+		"linebyline": "^1.3.0",
 		"lodash": "^4.17.15",
 		"lowlight": "^1.14.0",
 		"mem": "^6.1.0",
