--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
 		"files": [
 			"electron.js",
 			"electron/server.js",
+			"electron/util.js",
 			"build",
 			"!dist/*",
 			"dist/index.html",
