--- a/package.json
+++ b/package.json
@@ -170,7 +170,6 @@
 			"electron.js",
 			"electron/server.js",
 			"electron/util.js",
-			"electron/icon*",
 			"build",
 			"!dist/*",
 			"dist/index.html",
@@ -181,6 +180,7 @@
 			"dist/anytypeHelper.exe",
 			"dist/anytypeHelper",
 			"!node_modules/**/*",
+			"node_modules/about-window",
 			"node_modules/async",
 			"node_modules/at-least-node",
 			"node_modules/balanced-match",
