--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
 			"electron/server.js",
 			"electron/util.js",
 			"electron/icon*",
+			"electron/about.css",
 			"build",
 			"!dist/*",
 			"dist/index.html",
