--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 	"dependencies": {
 		"@sentry/browser": "^5.20.1",
 		"@types/bindings": "^1.3.0",
+		"about-window": "^1.13.4",
 		"amplitude-js": "^5.11.0",
 		"array-move": "^2.2.2",
 		"babel-plugin-prismjs": "^2.0.1",
@@ -163,6 +164,7 @@
 			"dist/lib",
 			"dist/anytypeHelper",
 			"dist/anytypeHelper.exe",
+			"electron/icon*",
 			"build"
 		],
 		"extraResources": [],
