--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
 		"raf": "^3.4.1",
 		"react": "^16.13.1",
 		"react-addons-shallow-compare": "^15.6.2",
+		"react-beautiful-dnd": "^13.0.0",
 		"react-dom": "^16.13.1",
 		"react-hot-loader": "^4.12.21",
 		"react-router-dom": "^5.2.0",
