--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
 		"react-hot-loader": "^4.12.21",
 		"react-router-dom": "^5.2.0",
 		"react-sortable-hoc": "^1.11.0",
+		"react-virtualized": "^9.22.2",
 		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
 		"rehype": "^9.0.1",
