--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
 		"install": "^0.13.0",
 		"is": "^3.3.0",
 		"jquery": "^3.5.1",
+		"keytar": "^7.0.0",
 		"lazy-val": "^1.0.4",
 		"linebyline": "^1.3.0",
 		"lodash": "^4.17.20",
@@ -115,6 +116,7 @@
 		"mobx-logger": "^0.7.1",
 		"mobx-react": "^6.3.1",
 		"mobx-state-tree": "^3.17.2",
+		"node-loader": "^1.0.2",
 		"node-sass": "^4.14.1",
 		"npm": "^6.14.8",
 		"npm-run-all": "^4.1.5",
