--- a/package.json
+++ b/package.json
@@ -128,9 +128,11 @@
 		"react-addons-shallow-compare": "^15.6.2",
 		"react-beautiful-dnd": "^13.0.0",
 		"react-dom": "^16.14.0",
+		"react-draggable-tags": "^1.0.2",
 		"react-hot-loader": "^4.13.0",
 		"react-router-dom": "^5.2.0",
 		"react-sortable-hoc": "^1.11.0",
+		"react-tag-input": "^6.4.3",
 		"react-virtualized": "^9.22.2",
 		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
