--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"bindings": "^1.5.0",
 		"blueimp-load-image": "^2.31.0",
 		"bytebuffer": "^5.0.1",
+		"chokidar": "^3.4.3",
 		"cross-env": "^7.0.2",
 		"css-loader": "^3.6.0",
 		"electron-devtools-installer": "^3.1.1",
