--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
 		"react-addons-shallow-compare": "^15.6.2",
 		"react-beautiful-dnd": "^13.0.0",
 		"react-dom": "^16.13.1",
+		"react-draggable-tags": "^1.0.2",
 		"react-hot-loader": "^4.13.0",
 		"react-router-dom": "^5.2.0",
 		"react-sortable-hoc": "^1.11.0",
