--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
 		"@types/react-router-dom": "^4.3.5",
 		"babel-loader": "^8.2.1",
 		"babel-preset-env": "^1.7.0",
-		"electron": "^11.0.2",
 		"electron-builder": "^21.2.0",
 		"electron-notarize": "^0.2.1",
+		"electron-packager": "^15.2.0",
+		"electron-rebuild": "^2.3.4",
 		"git-revision-webpack-plugin": "^3.0.6",
 		"ifdef-loader": "^2.1.5",
 		"json-loader": "^0.5.7",
@@ -82,6 +83,7 @@
 		"chokidar": "^3.4.3",
 		"cross-env": "^7.0.2",
 		"css-loader": "^3.6.0",
+		"electron": "^11.0.0",
 		"electron-devtools-installer": "^3.1.1",
 		"electron-dl": "^1.14.0",
 		"electron-json-storage": "^4.3.0",
@@ -100,6 +102,7 @@
 		"grpc-web": "^1.2.1",
 		"highlight.js": "^10.4.0",
 		"history": "^4.10.1",
+		"http-parser-js": "^0.5.3",
 		"inputmask": "^5.0.5",
 		"install": "^0.13.0",
 		"is": "^3.3.0",
